<resources>
    <string name="app_name">Craft Data Collector</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_out">Sign Out</string>
    <string name="really_quit">Are you sure you want to sign out of Craft?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="logged_in_as_key">CA_LOGGED_IN_AS</string>
    <string name="user_data_key">CA_USER_DATA_KEY</string>
    <string name="zero">0</string>

    <string name="email_hint">Email Address</string>
    <string name="password_hint">Your Password</string>
    <string name="login_text">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_required_message">Please provide your email address</string>
    <string name="password_required_message">Please enter your password</string>

    <string name="user_request_token">API_REQUEST_TOKEN</string>
    <string name="logout">Logout</string>

    <string name="space"> </string>
    <string name="login_activity_title">Craft Admin - Login</string>
    <string name="web_service_url">https://craft-bespoke.herokuapp.com</string>
    <!--<string name="web_service_url">http://192.168.8.100:9000</string>-->
    <string name="title_activity_camain">Craft Admin</string>
    <string name="username_hint">Your Username</string>
    <string name="action_new_artisan">New Artisan</string>
    <string name="artisans_list">Artisans List</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_hint">Business Name</string>
    <string name="surname_hint">Artisan\'s Surname*</string>
    <string name="firstname_hint">Artisan\'s First Name*</string>
    <string name="middlename_hint">Artisan\'s Middle Name</string>
    <string name="phone_hint">Contact Phone Number*</string>
    <string name="address_hint">Contact Address*</string>
    <string name="regulatory_id_prompt">Pick regulatory ID or take a photo</string>
    <string name="regulatory_id">Regulatory ID</string>
    <string name="guarantor_name_hint">Guarantor\'s Name*</string>
    <string name="guarantor_phone_hint">Guarantor\'s Phone Number*</string>
    <string name="guarantor_address_hint">Guarantor\'s Contact Address*</string>
    <string name="bank_details_label">Bank Details (Optional)</string>
    <string name="account_number_hint">Account Number</string>
    <string name="account_name_hint">Account Name</string>
    <string name="bank">Bank</string>
    <string name="banks_cache_key">banks_cache</string>
    <string name="specialties_cache_key">SPECIALTIES_CACHE</string>
    <string name="specialty">Specialty</string>
    <string name="certificate">Certificate</string>
    <string name="certificate_prompt">Professional Certificate</string>
    <string name="empty">No data to show</string>
    <string name="empty_state">Use the + button at the bottom right corner of this screen to add new Artisans to the system.</string>
    <string name="artsans_list_cache_key">ARTISANS_CACHE</string>
    <string name="no_artisans">No Artisans to show</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="view">Details</string>
    <string name="work_pic_prompt">Pick a Work Picture</string>
    <string name="description_tint">Enter a Description</string>
    <string name="artisan_details">Artisan Details</string>
    <string name="delete_work_pic">Delete Work Picture</string>
    <string name="delete_pic_confirmation">Are you sure you wan to delete this picture?</string>
    <string name="work_pics_headline">Work Pictures (Samples)</string>
    <string name="new_artisan">New Artisan</string>
    <string name="profile_pic_prompt">Choose a Profile Image</string>
    <string name="change">Change</string>
    <string name="title_activity_caedit">Edit Activity</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update Data</string>
    <string name="delete_record">Delete Record?</string>
    <string name="really_delete">Are you sure you want to delete this record?</string>
</resources>
