<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CALoginActivity"
    tools:showIn="@layout/activity_login">

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:spb_sections_count="2"
        app:spb_colors="@array/progress_bar_colors"
        app:spb_stroke_separator_length="@dimen/zero"
        app:spb_reversed="true"
        app:spb_mirror_mode="true"
        app:spb_stroke_width="8dp"
        app:spb_interpolator="spb_interpolator_acceleratedecelerate"
        app:spb_progressiveStart_activated="true"
        app:spb_progressiveStart_speed="2"
        app:spb_progressiveStop_speed="3.4"
        android:layout_marginTop="-4dp"
        android:visibility="gone"
        app:spb_speed="1.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="96dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_below="@+id/logo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/xlarge_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_height="wrap_content">

        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:layout_marginLeft="@dimen/xlarge_margin"
            android:layout_marginRight="@dimen/xlarge_margin">

            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username_hint" />

        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xlarge_margin"
            android:layout_marginRight="@dimen/xlarge_margin"
            android:layout_marginBottom="@dimen/medium_margin">

            <ng.softcom.bespoke.craftadmin.views.ESToggleEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_marginTop="@dimen/large_margin"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginLeft="@dimen/xlarge_margin"
            android:layout_marginRight="@dimen/xlarge_margin"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/login_text"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</RelativeLayout>
